--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,16 @@ a {
     text-decoration: none;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
 .clearfix::after {
     content: "";
     display: table;
@@ -95,4 +105,25 @@ a {
     font-weight: bold;
     font-size: 14px;
     text-decoration: underline;
+}
+
+.main-top {
+    background-color: #2b2b40;
+}
+
+.main-top__img {
+    margin: 0 auto;
+}
+
+.page-content, .sidebar-nav {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.sidebar-nav {
+    width: 177px;
+}
+
+.page-content {
+    width: 877px;
 }
