--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,14 @@ ul {
     padding: 0;
 }
 
+ul li {
+    list-style: none;
+}
+
+h1, h2, h3, p {
+    margin: 0;
+}
+
 .clearfix::after {
     content: "";
     display: table;
@@ -74,7 +82,7 @@ ul {
     padding: 13px 0;
     height: 51px;
 
-    background-color: #2b2b40;
+    background-color: #27283d;
 }
 
 .logo {
@@ -105,10 +113,12 @@ ul {
     font-weight: bold;
     font-size: 14px;
     text-decoration: underline;
+
+    cursor: pointer;
 }
 
 .main-top {
-    background-color: #2b2b40;
+    background-color: #27283d;
 }
 
 .main-top__img {
@@ -127,3 +137,85 @@ ul {
 .page-content {
     width: 877px;
 }
+
+/* nav  */
+
+.features {
+    padding-top: 50px;
+}
+
+.section-title {
+    font-weight: bold;
+    font-size: 49px;
+
+    color: #262424;
+}
+
+.features-list {
+    padding-top: 48px;
+}
+
+.features-item {
+    display: inline-block;
+    vertical-align: top;
+
+    padding-left: 20px;
+    padding-right: 22px;
+    width: 218px;
+
+    text-align: center;
+}
+
+.features-item:last-child {
+    width: 185px;
+    padding-left: 40px;
+}
+
+.features-item__icon {
+    position: relative;
+    width: 68px;
+    height: 68px;
+
+    margin: 0 auto 30px;
+
+    background-color: #2b2b40;
+    border-radius: 50%;
+}
+
+.features-item__icon-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.features-item__title {
+    font-size: 10.78px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.24em;
+}
+
+.feature-description {
+    padding-top: 18px;
+
+    line-height: 1.67;
+}
+
+.feature-description__list {
+    padding-top: 7px;
+    text-align: left;
+    line-height: 1.8;
+}
+
+.feature-description__item::before {
+    content: "•";
+    color: #b03665;
+    padding-right: 30px;
+}
+
+
+
+
+
+
