--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ h1, h2, h3, p {
 }
 
 .sidebar-nav {
-    width: 177px;
+    width: 175px;
 }
 
 .page-content {
@@ -220,6 +220,7 @@ h1, h2, h3, p {
 
 .news-list {
     padding-top: 64px;
+    margin-bottom: 60px;
 }
 
 .news-item {
@@ -250,7 +251,7 @@ h1, h2, h3, p {
 }
 
 .news__content {
-    padding-left: 15px;
+    padding-left: 12px;
     width: 686px;
 }
 
@@ -274,11 +275,50 @@ h1, h2, h3, p {
     line-height: 1.17;
 }
 
-
 .news__content p {
     font-family: "Roboto", sans-serif;
     font-weight: 300;
     font-size: 18px;
     line-height: 1.67;
 }
+
+.pagination__controlls, .pagination__left, .pagination__right, .pagination__list,  .pagination__item {
+    display: inline-block;
+}
+
+.pagination {
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+}
+
+.pagination__display {
+    margin-right: 30px;
+
+    font-weight: 300;
+    color: #656464;
+}
+
+.pagination__link, .pagination__left, .pagination__right {
+    padding: 5px 8px;
+    font-weight: 700;
+    color: #262424;
+
+    cursor: pointer;
+}
+
+.pagination__left--disabled {
+    color: #bdbdbd;
+    cursor: default;
+}
+
+.pagination__link--active {
+    background-color: #2b2b40;
+    border-radius: 2px;
+
+    color: #fff;
+
+    cursor: default;
+}
+
 
