--- a/css/blocks/news.css
+++ b/css/blocks/news.css
@@ -1,8 +1,10 @@
 .news__list {
-    margin-bottom: 60px;
+    margin-bottom: 58px;
 }
 
 .news__item {
+    display: flex;
+    align-items: flex-start;
     padding-bottom: 20px;
     margin-bottom: 25px;
 
@@ -15,11 +17,6 @@
     margin-bottom: 0;
 }
 
-.news__avatar, .news__content {
-    display: inline-block;
-    vertical-align: top;
-}
-
 .news__avatar-frame {
     width: 160px;
     height: 160px;
@@ -28,7 +25,7 @@
 }
 
 .news__content {
-    padding-left: 12px;
+    padding-left: 20px;
     width: 686px;
 }
 
