--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -14,12 +14,6 @@ body {
     background-color: #fff;
 }
 
-.clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-
 .wrapper {
     overflow: hidden;
     min-width: 1100px;
@@ -36,6 +30,24 @@ body {
 .container {
     width: 1060px;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-content__container {
+    justify-content: flex-start;
+}
+
+.header__container {
+    align-items: center;
+}
+
+.footer__container {
+    align-items: center;
+}
+
+*, ::before, ::after {
+    box-sizing: border-box;
 }
 
 a {
