--- a/css/blocks/feedback.css
+++ b/css/blocks/feedback.css
@@ -1,10 +1,11 @@
 .feedback {
     padding-top: 57px;
-    padding-bottom: 50px;
+    padding-bottom: 49px;
 }
 
 .feedback__frame {
-    padding: 35px 70px 49px;
+    padding: 35px 69px 34px;
     background-color: #f4f4f4;
+    border-radius: 2px;
 }
 
