--- a/css/blocks/form.css
+++ b/css/blocks/form.css
@@ -1,6 +1,8 @@
 .form__group {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 
     margin-bottom: 17px;
 
@@ -14,7 +16,7 @@
 }
 
 .form__input {
-    padding: 10px;
+    padding: 13px 10px;
     width: 270px;
 
     border: none;
@@ -23,7 +25,7 @@
 
 .form__input-label, .form__textarea-label, .form__radio-text {
     display: block;
-    margin-bottom: 7px;
+    margin-bottom: 6px;
 }
 
 .form__textarea-label {
@@ -32,10 +34,26 @@
 
 .form__textarea {
     width: 100%;
-    padding: 10px;
+    padding: 5px 10px;
 
     border: 1px solid #cb2376;
     border-radius: 2px;
 
     resize: none;
+}
+
+.form__button {
+    padding: 16px 20px;
+
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: .2em;
+
+    color: #fff;
+    background-color: #2b2b40;
+    border: none;
+    border-radius: 2px;
+
+    cursor: pointer;
 }
