--- a/css/main.css
+++ b/css/main.css
@@ -16,10 +16,11 @@
 @import url('blocks/footer.css');
 @import url('blocks/copyright.css');
 @import url('blocks/socials.css');
-@import url('blocks/reviews.css');
 @import url('blocks/discount.css');
 @import url('blocks/feedback.css');
 @import url('blocks/form.css');
+@import url('blocks/major-list.css');
+@import url('blocks/reviews.css');
 
 
 
