--- a/css/blocks/pagination.css
+++ b/css/blocks/pagination.css
@@ -42,12 +42,12 @@
     background-color: #2b2b40;
     border-radius: 2px;
 
-    color: #fff;
+    color: #ca2376;
 
     cursor: default;
 }
 
 .pagination__link:hover {
-    color: #952663;
+    color: #952662;
     transition: .3s;
 }
