--- a/css/blocks/page-top.css
+++ b/css/blocks/page-top.css
@@ -1,10 +1,10 @@
-.main-top {
+.page-top {
     margin-bottom: 50px;
 
     background-color: #27283d;
 }
 
-.main-top__img {
+.page-top__img {
     margin: 0 auto;
 }
 
