--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,9 @@
 @import url('blocks/header.css');
 @import url('blocks/logo.css');
 @import url('blocks/contacts.css');
-@import url('blocks/main-top.css');
+@import url('blocks/page-top.css');
 @import url('blocks/nav.css');
-@import url('blocks/page-content.css');
+@import url('blocks/main-content.css');
 @import url('blocks/breadcrumbs.css');
 @import url('blocks/section-title.css');
 @import url('blocks/features.css');
@@ -21,6 +21,8 @@
 @import url('blocks/form.css');
 @import url('blocks/major-list.css');
 @import url('blocks/reviews.css');
+@import url('blocks/btn.css');
+@import url('blocks/partners.css');
 
 
 
