--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@
 @import url('blocks/reviews.css');
 @import url('blocks/btn.css');
 @import url('blocks/partners.css');
+@import url('blocks/prices.css');
 
 
 
