--- a/css/blocks/nav.css
+++ b/css/blocks/nav.css
@@ -2,6 +2,11 @@
     width: 180px;
 }
 
+.nav__list {
+    display: flex;
+    flex-direction: column;
+}
+
 .nav--padding-top {
     padding-top: 10px;
 }
