--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 @import url('blocks/contacts.css');
 @import url('blocks/page-top.css');
 @import url('blocks/nav.css');
-@import url('blocks/main-content.css');
+@import url('blocks/page-content.css');
 @import url('blocks/breadcrumbs.css');
 @import url('blocks/section-title.css');
 @import url('blocks/features.css');
