--- a/css/blocks/feedback.css
+++ b/css/blocks/feedback.css
@@ -4,7 +4,10 @@
 }
 
 .feedback__frame {
-    padding: 35px 69px 34px;
+    padding: 35px 69px 51px;
+    margin: auto;
+    width: 700px;
+
     background-color: #f4f4f4;
     border-radius: 2px;
 }
