--- a/css/blocks/prices.css
+++ b/css/blocks/prices.css
@@ -12,6 +12,10 @@
     text-align: center;
 }
 
+.prices__item:nth-of-type(3n) {
+    margin-right: 0;
+}
+
 .prices__title {
     position: absolute;
     top: 50%;
