--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@
 @import url('blocks/btn.css');
 @import url('blocks/partners.css');
 @import url('blocks/prices.css');
+@import url('blocks/intro.css');
 
 
 
