--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@
 @import url('blocks/partners.css');
 @import url('blocks/prices.css');
 @import url('blocks/intro.css');
+@import url('blocks/dropdown.css');
 
 
 
