--- a/css/blocks/features.css
+++ b/css/blocks/features.css
@@ -14,6 +14,10 @@
     text-align: center;
 }
 
+.features__item::after {
+    conte
+}
+
 .features__item:last-child {
     width: 220px;
     padding-left: 20px;
@@ -31,11 +35,32 @@
     border-radius: 50%;
 }
 
-.features__icon-img {
+.features__icon::after {
+    content: "";
+    display: block;
+
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.features__icon--img--flower::after {
+    width: 27px;
+    height: 31px;
+    background: url(../../img/sprite.png) no-repeat -62px -10px;
+}
+
+.features__icon--img--star::after {
+    width: 32px;
+    height: 32px;
+    background: url(../../img/sprite.png) no-repeat -10px -10px;
+}
+
+.features__icon--img--palette::after {
+    width: 28px;
+    height: 29px;
+    background: url(../../img/sprite.png) no-repeat -109px -10px;
 }
 
 .features__title {
