--- a/css/blocks/intro.css
+++ b/css/blocks/intro.css
@@ -6,8 +6,8 @@
 .intro__img {
     width: 100%;
     height: 100%;
-    object-position: center;
-    object-fit: cover;
+    background: #2b2b40 url(../../img/intro.jpg) no-repeat center;
+    background-size: cover;
 }
 
 .intro__img-overlay {
@@ -20,16 +20,76 @@
     background-color: rgba(236, 30, 121, 0.15);
 }
 
-.intro__animation {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    display: flex;
-    flex-direction: column;
-}
-
 .intro__logo {
     margin: 0 auto 29px;
 }
+
+.intro__animation {
+    width: 183px;
+    height: 193px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+
+    display: flex;
+    flex-direction: column;
+    animation-name: jackInTheBox;
+    -webkit-animation-name: jackInTheBox;
+    animation-duration: .5s;
+}
+
+@keyframes jackInTheBox {
+    from {
+      opacity: 0;
+      -webkit-transform: scale(0.1) rotate(30deg);
+      transform: scale(0.1) rotate(30deg);
+      -webkit-transform-origin: center bottom;
+      transform-origin: center bottom;
+    }
+  
+    50% {
+      -webkit-transform: rotate(-10deg);
+      transform: rotate(-10deg);
+    }
+  
+    70% {
+      -webkit-transform: rotate(3deg);
+      transform: rotate(3deg);
+    }
+  
+    to {
+      opacity: 1;
+      -webkit-transform: scale(1);
+      transform: scale(1);
+    }
+  }
+
+  @-webkit-keyframes jackInTheBox {
+    from {
+      opacity: 0;
+      -webkit-transform: scale(0.1) rotate(30deg);
+      transform: scale(0.1) rotate(30deg);
+      -webkit-transform-origin: center bottom;
+      transform-origin: center bottom;
+    }
+  
+    50% {
+      -webkit-transform: rotate(-10deg);
+      transform: rotate(-10deg);
+    }
+  
+    70% {
+      -webkit-transform: rotate(3deg);
+      transform: rotate(3deg);
+    }
+  
+    to {
+      opacity: 1;
+      -webkit-transform: scale(1);
+      transform: scale(1);
+    }
+  }
+  
