--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -14,6 +14,10 @@ body {
     background-color: #fff;
 }
 
+.body__intro {
+    overflow: hidden;
+}
+
 .wrapper {
     overflow: hidden;
     min-width: 1100px;
