--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@
 @import url('blocks/prices.css');
 @import url('blocks/intro.css');
 @import url('blocks/dropdown.css');
+@import url('blocks/sidebar.css');
 
 
 
