--- a/css/blocks/partners.css
+++ b/css/blocks/partners.css
@@ -1,27 +1,27 @@
 .partners {
-    flex-grow: 1;
+    width: 100%;
+    padding-top: 20px;
+    margin-bottom: 24px;
 
-    padding-bottom: 98px;
+    border: 1px solid #e8e8ec;
+    text-align: center;
 }
 .partners__group {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     flex-wrap: wrap;
     align-items: center;
 }
 
 .partners__logo {
-    width: 18%;
-    margin-right: 13%;
-    margin-bottom: 48px;
+    width: 48.3%;
+    margin-bottom: 45px;
     text-align: center;
 }
 
-.partners__logo:nth-of-type(3n) {
-    margin-right: 0;
-}
-
-.partners__logo:nth-of-type(n+4) {
-    margin-bottom: 0;
+.partners__logo:last-of-type {
+    margin-bottom: 36px;
 }
 
 .partners__logo-img {
