--- a/css/blocks/sidebar.css
+++ b/css/blocks/sidebar.css
@@ -3,3 +3,15 @@
     padding-right: 20px;
     padding-top: 17px;
 }
+
+.sidebar__title {
+    margin-bottom: 22px;
+    display: inline-block;
+
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.sidebar__title--margin--l {
+    margin-bottom: 45px;
+}
