--- a/css/blocks/nav.css
+++ b/css/blocks/nav.css
@@ -16,6 +16,9 @@
 }
 
 .nav__link {
+    padding-left: 35px;
+    position: relative;
+
     font-size: 12px;
     font-weight: 700;
     letter-spacing: 0.1em;
@@ -31,7 +34,23 @@
 .nav__link::before {
     content: "";
     display: inline-block;
-    margin-right: 17px;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 20px;
+    height: 18px;
+    background: no-repeat left center / contain;
+    vertical-align: middle;
+}
+
+.nav__link::after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+
     width: 20px;
     height: 18px;
     background: no-repeat left center / contain;
@@ -48,8 +67,21 @@
     background: url(../../img/sprite.png) no-repeat -88px -100px;
 }
 
+.nav__item--icon--main .nav__link::after {
+    width: 17px;
+    height: 15px;
+    background: url(../../img/sprite.png) no-repeat -157px -10px;
+    opacity: 0;
+}
+
 .nav__item--icon--main .nav__link:hover::before {
-    background-position: -157px -10px;
+    opacity: 0;
+    transition: .3s;
+}
+
+.nav__item--icon--main .nav__link:hover::after {
+    opacity: 1;
+    transition: .3s;
 }
 
 .nav__item--icon--star .nav__link::before {
@@ -58,8 +90,21 @@
     background: url(../../img/sprite.png) no-repeat -10px -62px;
 }
 
+.nav__item--icon--star .nav__link::after {
+    width: 20px;
+    height: 18px;
+    background: url(../../img/sprite.png) no-repeat -50px -62px;
+    opacity: 0;
+}
+
 .nav__item--icon--star .nav__link:hover::before {
-    background-position: -50px -62px;
+    opacity: 0;
+    transition: .3s;
+}
+
+.nav__item--icon--star .nav__link:hover::after {
+    opacity: 1;
+    transition: .3s;
 }
 
 .nav__item--icon--wallet .nav__link::before {
@@ -68,8 +113,21 @@
     background: url(../../img/sprite.png) no-repeat -10px -100px;
 }
 
+.nav__item--icon--wallet .nav__link::after {
+    width: 19px;
+    height: 16px;
+    background: url(../../img/sprite.png) no-repeat -49px -100px;
+    opacity: 0;
+}
+
 .nav__item--icon--wallet .nav__link:hover::before {
-    background-position: -49px -100px;
+    opacity: 0;
+    transition: .3s;
+}
+
+.nav__item--icon--wallet .nav__link:hover::after {
+    opacity: 1;
+    transition: .3s;
 }
 
 .nav__item--active .nav__link {
@@ -110,12 +168,24 @@
     color: #fff;
 }
 
+.nav--header .nav__item--icon--main .nav__link::after {
+    background: url(../../img/nav_main.png);
+}
+
 .nav--header .nav__item--icon--star .nav__link::before {
     background: url(../../img/nav_star_white.png);
 }
 
+.nav--header .nav__item--icon--star .nav__link::after {
+    background: url(../../img/nav_star.png)
+}
+
 .nav--header .nav__item--icon--wallet .nav__link::before {
     background: url(../../img/nav_wallet_white.png);
+}
+
+.nav--header .nav__item--icon--wallet .nav__link::after {
+    background: url(../../img/nav_wallet.png)
 }
 
 .nav--header .nav__item--active.nav__item--icon--main .nav__link::before {
@@ -132,10 +202,21 @@
 }
 
 .nav--header .nav__item--icon--star .nav__link:hover::before {
-    background: url(../../img/nav_star.png)
+   opacity: 0;
+   transition: .3s;
 }
 
-.nav--header .nav__item--icon--wallet .nav__link:hover::before {
-    background: url(../../img/nav_wallet.png)
-}
+.nav--header .nav__item--icon--star .nav__link:hover::after {
+    opacity: 1;
+    transition: .3s;
+ }
 
+ .nav--header .nav__item--icon--wallet .nav__link:hover::before {
+    opacity: 0;
+    transition: .3s;
+ }
+ 
+ .nav--header .nav__item--icon--wallet .nav__link:hover::after {
+     opacity: 1;
+     transition: .3s;
+  }
