--- a/css/blocks/pagination.css
+++ b/css/blocks/pagination.css
@@ -1,6 +1,6 @@
 .pagination {
     display: flex;
-    justify-content: center;
+    padding-left: 200px;
     align-items: center;
 
     font-family: "Roboto", sans-serif;
@@ -19,7 +19,7 @@
 
 
 .pagination__display {
-    margin-right: 30px;
+    margin-right: 15px;
 
     font-weight: 300;
     color: #656464;
@@ -27,6 +27,7 @@
 
 .pagination__link, .pagination__left, .pagination__right {
     padding: 4px 8px;
+    margin-right: 1px;
     font-weight: 700;
     color: #262424;
 
