prices.html pixel perfect

--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -6,5 +6,9 @@
 }
 
 .header--margin-buttom {
-    margin-bottom: 33px;
+    margin-bottom: 37px;
+}
+
+.header--margin-buttom--s {
+    margin-bottom: 23px;
 }
