--- a/css/blocks/intro.css
+++ b/css/blocks/intro.css
@@ -1,16 +1,15 @@
 .intro {
     width: 100%;
     height: 100vh;
-}
+    position: relative;
 
-.intro__img {
-    width: 100%;
-    height: 100%;
-    background: #2b2b40 url(../../img/intro.jpg) no-repeat center;
+    background: url(../../img/intro.jpg) no-repeat 50% 50%;
     background-size: cover;
 }
 
-.intro__img-overlay {
+.intro:after {
+    content: "";
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
