--- a/css/blocks/prices.css
+++ b/css/blocks/prices.css
@@ -61,7 +61,9 @@
     background-size: cover;
 }
 
-.prices__picture-img-overlay {
+.prices__picture-img:after {
+    content: "";
+    display: block;
     width: 100%;
     height: 100%;
     background-color: rgba(43, 43, 64, 0.85);
